bitfields/tests/compile_error_cases/bitfield_field_bits_attribute_without_array.rs
use bitfields::bitfield;

#[bitfield(u32)]
pub struct Bitfield {
    #[bits]
    a: u8,
    #[bits(default = 1)]
    b: u8,
    #[bits(default = 2)]
    c: u8,
    #[bits(default = 3)]
    d: u8,
}

fn main() {}
